# advent-of-code

./: .gitignore
2019-python/: main.py  pyproject.toml
2020 (python)/day03/: day03.py
2020 (python)/day05/: day05.py
2020 (python)/day11/: day11.py
2020 (python)/day12/: day12.py
2020 (python)/day15/: day15.py
2020 (python)/day16/: day16.py
2020-go-redo/: README.md  go.mod
2020-go-redo/day01/: main.go
2020-go-redo/day02/: main.go
2020-go-redo/day03/: main.go
2020-go-redo/day04/: main.go  main_test.go
2020-go-redo/day05/: main.go
2020-haskell-redo/: aoc.cabal
2020-haskell-redo/app/: Main.hs
2020-haskell-redo/src/Day01/: Main.hs
2020-haskell-redo/src/Day02/: Main.hs
2020-haskell-redo/src/Day03/: Main.hs
2020-haskell-redo/src/Day04/: Main.hs
2020-haskell-redo/src/Day05/: Main.hs
2020-haskell-redo/src/Day06/: Main.hs
2020-haskell-redo/src/Day07/: Graph.hs  Main.hs
2020-haskell-redo/src/Day08/: Main.hs
2020-haskell-redo/src/Day09/: Main.hs
2020-haskell-redo/src/Day10/: Main.hs
2020-haskell-redo/src/Day11/: Main.hs
2020-haskell-redo/src/Day12/: Main.hs  Part1.hs  Part2.hs
2020-haskell-redo/src/Day13/: Main.hs  Part1.hs  Part2.hs
2020-haskell-redo/src/Day14/: Main.hs  Part1.hs  Part2.hs
2020-haskell-redo/src/Day15/: Main.hs
2020-haskell-redo/src/Day16/: Main.hs
2020-haskell-redo/src/Day17/: Main.hs
2020-haskell-redo/src/Day18/: Main.hs  Part1.hs  Part2.hs
2020-haskell-redo/src/Day19/: Main.hs
2020-haskell-redo/src/Day20/: Main.hs  Part1.hs  Part2.hs
2020-haskell-redo/src/Day21/: Main.hs
2020-haskell-redo/src/Day22/: Main.hs
2020-haskell-redo/src/Day23/: Main.hs
2020-haskell-redo/src/Day24/: Main.hs
2020-haskell-redo/src/Day25/: Main.hs
2020-haskell-redo/test/Day05/: MainSpec.hs
2020-python/day06/: day06.py
2022-haskell/: 2022-haskell.cabal
2022-haskell/app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs
2022-haskell/app/Data/: Counter.hs
2022-haskell/app/Day11/: Part01.hs  Part02.hs
2022-haskell/app/Day21/: Part01.hs  part02.py
2022-haskell/day01/: Day01.hs
2022-haskell/day02/: Day02.hs
2022-haskell/day03/: Day03.hs
2022-haskell/day04/: Day04.hs
2022-haskell/test/: Day23Spec.hs  Day24Spec.hs  Day25Spec.hs
2023-haskell/: 2023haskell.cabal
2023-haskell/.claude/commands/: tutor.md
2023-haskell/app/: Main.hs
2023-haskell/src/Day01/: Main.hs  Part01.hs  Part02.hs
2023-haskell/src/Day02/: Main.hs
2023-haskell/src/Day03/: Main.hs
2023-haskell/src/Day04/: Main.hs  Part01.hs  Part02.hs
2023-haskell/src/Day05/: Main.hs  Part01.hs  Part02.hs
2023-haskell/src/Day06/: Main.hs
2023-haskell/src/Day07/: Main.hs  Part01.hs  Part02.hs
2023-haskell/src/Day08/: Main.hs  Part02.hs
2023-haskell/src/Day09/: Main.hs
2023-haskell/src/Day10/: Main.hs
2023-haskell/src/Day11/: Main.hs  Part01.hs  Part02.hs
2023-haskell/src/Day12/: Main.hs
2023-haskell/src/Day13/: Main.hs
2023-haskell/src/Day14/: Main.hs
2023-haskell/src/Day15/: Main.hs
2023-haskell/src/Day16/: Main.hs
2023-haskell/src/Day17/: Main.hs
2023-haskell/src/Day18/: Main.hs  Part01.hs  Part02.hs
2023-haskell/src/Day19/: Main.hs  Part01.hs  Part02.hs
2023-haskell/src/Day20/: Main.hs  Part02.hs
2023-haskell/src/Day21/: Main.hs  Part01.hs  Part02.hs  Part022.hs
2023-haskell/src/Day22/: Main.hs
2023-haskell/src/Day23/: Main.hs
2023-haskell/src/Day24/: Main.hs  Part01.hs  Part02.hs
2023-haskell/src/Day25/: Main.hs
2023-haskell/src/Util/: Types.hs
2023-haskell/test/Day01/: Part02Spec.hs
2023-haskell/test/Day05/: Part01Spec.hs
2023-haskell/test/Day06/: MainSpec.hs
2023-haskell/test/Day07/: Part01Spec.hs  Part02Spec.hs
2023-haskell/test/Day08/: Part02Spec.hs
2023-haskell/test/Day09/: MainSpec.hs
2023-haskell/test/Day10/: MainSpec.hs
2023-haskell/test/Day11/: Part01Spec.hs
2023-haskell/test/Day12/: MainSpec.hs
2023-haskell/test/Day13/: MainSpec.hs
2023-haskell/test/Day14/: MainSpec.hs
2023-haskell/test/Day15/: MainSpec.hs
2023-haskell/test/Day17/: MainSpec.hs
2023-haskell/test/Day18/: Part02Spec.hs
2023-haskell/test/Day19/: Part02Spec.hs
2023-haskell/test/Day20/: MainSpec.hs
2023-haskell/test/Day21/: Part01Spec.hs  Part02Spec.hs
2024-haskell/: 2024haskell.cabal
2024-haskell/app/: Main.hs
2024-haskell/src/Day01/: Main.hs  Parse.hs  Part01.hs  Part02.hs  Types.hs
2024-haskell/src/Day02/: Main.hs
2024-haskell/src/Day03/: Main.hs
2024-haskell/src/Day04/: Main-og.hs  Main.hs  Matrix.hs
2024-haskell/src/Day05/: Main.hs
2024-haskell/src/Day06/: Main.hs
2024-haskell/src/Day07/: Main.hs  Parse.hs  Part1.hs  Part2.hs  Types.hs
2024-haskell/src/Day08/: Main.hs
2024-haskell/src/Day09/: Main.hs  Parse.hs  Part1.hs  Part2.hs  Types.hs
2024-haskell/src/Day10/: Main.hs  Matrix.hs  Parse.hs
2024-haskell/src/Day11/: Main.hs
2024-haskell/src/Day12/: Main.hs
2024-haskell/test/Day04/: MainSpec.hs  MatrixSpec.hs
2024-haskell/test/Day07/: Part1Spec.hs
2024-haskell/test/Day08/: MainSpec.hs
2024-haskell/test/Day09/: ParseSpec.hs  Part1Spec.hs  Part2Spec.hs
2024-haskell/test/Day10/: MainSpec.hs  ParseSpec.hs
2025-haskell/: 2025haskell.cabal
2025-haskell/.claude/commands/: tutor.md
2025-haskell/app/: Main.hs
2025-haskell/src/Day01/: Main.hs
2025-haskell/src/Day02/: Main.hs
2025-haskell/src/Day03/: Main.hs
2025-haskell/src/Day04/: Main.hs
2025-haskell/src/Day05/: Main.hs
2025-haskell/src/Day06/: Main.hs
2025-haskell/src/Day07/: Main.hs
2025-haskell/src/Day08/: Main.hs
2025-haskell/src/Day09/: Main.hs
2025-haskell/src/Day10/: Main.hs  Part1.hs  Part2.hs
2025-haskell/src/Day11/: Main.hs
2025-haskell/src/Day12/: Main.hs
day07/: day07.py
day09/: day09.py
day1/: day1.py
day10/: day10.py
day13/: day13.py
day14/: day14.py
day17/: day17_part1.py
day18/: part1.py  part2.py
day2/: day2.py
day4/: day4.py
day8/: day8.py
(+62 files in other folders)
