cabal-version:      3.14
name:               aoc
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Day01.Main
      Day02.Main
      Day03.Main
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.2.0
      , array
      , containers
      , mtl
      , parsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.2.0,
        aoc

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite aoc-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        aoc
