cabal-version:      3.0
name:               2022haskell
version:            0.1.0.0
build-type:         Simple
data-files:         data/*.txt

common warnings
    ghc-options:
      -Wall
      -fno-warn-orphans

executable 2022-haskell
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11.Part01
        Day11.Part02
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
    build-depends:
        base ^>=4.17.0.0,
        composition ^>=1.0.2.2,
        containers ^>=0.6.6,
        ghc,
        hashable ^>=1.4.1.0,
        megaparsec ^>=9.3.0,
        range ^>=0.3.0.2,
        safe ^>=0.3.19,
        split ^>=0.2.3.5,
        unordered-containers ^>=0.2.19.1,
        vector ^>=0.13.0.0
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: MultiWayIf
