cabal-version:      3.4
name:               2023haskell
version:            0.1.0.0
build-type:         Simple

common haskell-config
  ghc-options: -Wall
  default-extensions: MultiWayIf
  default-language: GHC2021

library
  import: haskell-config
  build-depends:
      base >=4.17.2.1
    , containers >=0.6.7
    , ghc >=9.4.8
    , hashable >=1.4.3.0
    , inflist >=0.0.1
    , megaparsec >=9.6.1
    , memoize >=1.1.2
    , monad-loops >=0.4.3
    , safe >=0.3.19
    , split >=0.2.4
    , transformers >=0.5.6.2
    , unordered-containers >=0.2.19.1
  hs-source-dirs: src
  exposed-modules:
    Day01.Main
    Day01.Part01
    Day01.Part02
    Day02.Main
    Day03.Main
    Day04.Main
    Day04.Part01
    Day04.Part02
    Day05.Main
    Day05.Part01
    Day05.Part02
    Day06.Main
    Day07.Main
    Day07.Part01
    Day07.Part02
    Day08.Main
    Day08.Part02
    Day09.Main
    Day10.Main
    Day11.Main
    Day11.Part01
    Day11.Part02
    Day12.Main
    Day15.Main
    Day16.Main
    Util.Types

executable 2023haskell
  import: haskell-config
  build-depends:
      2023haskell
    , base >=4.17.2.1
  hs-source-dirs: app
  main-is: Main.hs

test-suite test-2022-haskell
  import: haskell-config
  type: exitcode-stdio-1.0
  build-tool-depends:
    hspec-discover:hspec-discover >= 2.11.7,
  build-depends:
      2023haskell
    , base >=4.17.2.1
    , containers >=0.6.7
    , ghc >=9.4.8
    , hspec >= 2.11.7
    , megaparsec >=9.6.1
    , unordered-containers >=0.2.19.1
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Day01.Part02Spec
    Day05.Part01Spec
    Day06.MainSpec
    Day07.Part01Spec
    Day07.Part02Spec
    Day08.Part02Spec
    Day09.MainSpec
    Day10.MainSpec
    Day11.Part01Spec
    Day12.MainSpec
    Day15.MainSpec
