cabal-version: 3.4
name:          2024haskell
version:       0.1.0.0
build-type:    Simple

common haskell-config
  ghc-options:        -Wall
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedRecordDot

  default-language:   GHC2021

library
  import:          haskell-config
  build-depends:
    , array
    , base                  ^>=4.18.3.0
    , containers
    , deque
    , hashable
    , megaparsec
    , mtl
    , regex-tdfa
    , safe
    , unordered-containers

  hs-source-dirs:  src
  exposed-modules:
    Day01.Main
    Day02.Main
    Day03.Main
    Day04.Main
    Day04.Matrix
    Day05.Main
    Day06.Main
    Day07.Main
    Day07.Part1
    Day07.Part2
    Day08.Main
    Day09.Main
    Day09.Parse
    Day09.Part1
    Day09.Part2
    Day09.Types
    Day10.Main
    Day10.Matrix
    Day10.Parse
    Day11.Main
    Day12.Main

  other-modules:
    Day01.Parse
    Day01.Part01
    Day01.Part02
    Day01.Types
    Day07.Parse
    Day07.Types

executable 2024haskell
  import:         haskell-config
  build-depends:
    , 2024haskell
    , base         ^>=4.18.3.0

  hs-source-dirs: app
  main-is:        Main.hs

test-suite test-2024-haskell
  import:             haskell-config
  type:               exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover >=2.11.10
  build-depends:
    , 2024haskell
    , base                  ^>=4.18.3.0
    , hspec
    , unordered-containers

  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    Day04.MainSpec
    Day04.MatrixSpec
    Day07.Part1Spec
    Day08.MainSpec
    Day09.ParseSpec
    Day09.Part1Spec
    Day09.Part2Spec
    Day10.MainSpec
    Day10.ParseSpec
